--- a/plantilla_examen/pubspec.yaml
+++ b/plantilla_examen/pubspec.yaml
@@ -33,8 +33,11 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.5
+  path: 1.8.2
+  path_provider: ^2.0.12
   provider: ^6.0.5
   shared_preferences: ^2.0.17
+  sqflite: ^2.2.4+1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
